# AIO_ts-transformer-ablation

./: CLAUDE.md  DECODER_ABLATION_RESULTS.md  Dataloader.py  ENCODER_ABLATION_RESULTS.md  LICENSE  README.md  REVIEW.md  ablation_study.py  benchmark.py  evaluate.py  evaluate_decoder.py  evaluate_encoder.py  pyproject.toml  test.py  train.py
Embedding/: embedding.py
experiments/: .gitignore  benchmark_quick.csv  decoder_ablation.csv  encoder_ablation.csv
scripts/: make_figures.py
src/ts_ablation/configs/: __init__.py  experiment.py  standard.py
src/ts_ablation/decoder_arch/: __init__.py
src/ts_ablation/decoder_arch/models/: feed_forward.py  multi_head_attention.py
src/ts_ablation/encoder_arch/: __init__.py
src/ts_ablation/encoder_arch/models/: __init__.py  decoder.py  embedding.py  encoder_layer.py
src/ts_ablation/models/: __init__.py  decoder.py  embedding.py  encoder.py  encoder_layer.py  feed_forward.py  forecaster.py  multi_head_attention.py
