[project]
name = "ts-transformer-ablation"
version = "0.1.0"
description = "Ablation study for Transformer variants on time series forecasting (ETT)"
requires-python = ">=3.11"
dependencies = [
    "torch>=2.2.0",
    "numpy>=1.26.0",
    "pandas>=2.1.0",
    "scikit-learn>=1.4.0",
    "einops>=0.7.0",
    "pydantic>=2.5.0",
    "typer>=0.12.0",
    "rich>=13.7.0",
    "matplotlib>=3.8.0",
    "tensorboard>=2.16.0",
    "tqdm>=4.66.0",
    "seaborn>=0.13.2",
]

[project.scripts]
ablation = "ts_ablation.cli:app"

[tool.uv]
dev-dependencies = [
    "ipykernel>=6.29.0",
    "jupyter>=1.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/ts_ablation"]
